Update Title and Description of the Main Page

--- a/index.html
+++ b/index.html
@@ -11,13 +11,22 @@
       crossorigin="anonymous"
     />
 
-    <title>Ghazaleh Ashrafi</title>
+    <title>Front-end Devlopr| Ghazaleh Ashrafi</title>
+    <meta
+      name="description"
+      content="This is a short summary of the poject I, Ghazaleh Ashrafi, created for my SheCodes Workshops."
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light header fixed-top">
       <div class="container-fluid container-size">
-        <a class="navbar-brand" href="index.html">Ghazaleh Ashrafi</a>
+        <a
+          class="navbar-brand"
+          href="index.html"
+          title="Front-end Developer Ghazaleh Ashrafi"
+          >Ghazaleh Ashrafi</a
+        >
         <button
           class="navbar-toggler"
           type="button"
