Add Link Titles

--- a/index.html
+++ b/index.html
@@ -40,11 +40,25 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="index.html"
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="index.html"
+              title="Homepage"
               >Home</a
             >
-            <a class="nav-link" href="about.html">About me</a>
-            <a class="nav-link" href="about.html#contact">Contact me</a>
+            <a
+              class="nav-link"
+              href="about.html"
+              title="More Information About Ghazaleh Ashrafi"
+              >About me</a
+            >
+            <a
+              class="nav-link"
+              href="about.html#contact"
+              title="Contact me by clicking here"
+              >Contact me</a
+            >
           </div>
         </div>
       </div>
@@ -54,8 +68,18 @@
     <h1>Ghazaleh Ashrafi</h1>
     <h3>💚🤍🧡 Front-end developer, based in Iran</h3>
     <div class="navigation-links">
-      <a href="about.html#contact" class="contact-link">Contact me</a>
-      <a href="about.html" class="about-link">About me</a>
+      <a
+        href="about.html#contact"
+        class="contact-link"
+        title="Contact me by clicking here"
+        >Contact me</a
+      >
+      <a
+        href="about.html"
+        class="about-link"
+        title="More Information About Ghazaleh Ashrafi"
+        >About me</a
+      >
     </div>
     <div class="container container-size">
       <div class="row">
@@ -81,6 +105,7 @@
                 href="https://www.shecodes.io/workshops/shecodes-basics-a0b33cd6-9dfc-4cea-bd4b-6ea3d75f7132/projects/1298176"
                 target="_blank"
                 class="btn contact-link"
+                title="Save Urmia Lake App-SheCodes Basic's Final Project "
                 >Launch Lake Urmia App</a
               >
             </p>
@@ -102,6 +127,7 @@
               href="https://www.shecodes.io/workshops/shecodes-plus-1d4e0034-92fd-4092-968e-2a18eb87fb3f/projects/1432349"
               target="_blank"
               class="btn contact-link"
+              title="Weather App-SheCodes Pro's Final Project"
               >Weather App</a
             >
           </div>
@@ -132,6 +158,7 @@
               href="https://jolly-heliotrope-8c80aa.netlify.app/"
               target="_blank"
               class="btn contact-link"
+              title="Birthday App-To Celebrate a Friend's Birthday"
               >Weather App</a
             >
           </div>
