Add Meta Description and Link Titles

--- a/about.html
+++ b/about.html
@@ -11,12 +11,21 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>About Ghazaleh Ashrafi</title>
+    <title>About Front-end Developer Ghazaleh Ashrafi</title>
+    <meta
+      name="description"
+      content="More Information about Ghazaleh Ashrafi and her Projects on SheCodesWorkshos."
+    />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light header fixed-top">
       <div class="container-fluid container-size">
-        <a class="navbar-brand" href="index.html">Ghazaleh Ashrafi</a>
+        <a
+          class="navbar-brand"
+          href="index.html"
+          title="Front-end Developer Ghazaleh Ashrafi"
+          >Ghazaleh Ashrafi</a
+        >
         <button
           class="navbar-toggler"
           type="button"
@@ -30,9 +39,25 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" aria-current="page" href="index.html">Home</a>
-            <a class="nav-link active" href="about.html">About me</a>
-            <a class="nav-link" href="about.html#contact">Contact me</a>
+            <a
+              class="nav-link"
+              aria-current="page"
+              href="index.html"
+              title="Homepage"
+              >Home</a
+            >
+            <a
+              class="nav-link active"
+              href="about.html"
+              title="More Information About Ghazaleh Ashrafi"
+              >About me</a
+            >
+            <a
+              class="nav-link"
+              href="about.html#contact"
+              title="Contact me by clicking here"
+              >Contact me</a
+            >
           </div>
         </div>
       </div>
@@ -70,7 +95,11 @@
 
     <div id="contact" class="contact">
       <h2>📮 Contact me</h2>
-      <a href="mailto:ghazaal.ashrafi@gmail.com" class="email-link">
+      <a
+        href="mailto:ghazaal.ashrafi@gmail.com"
+        class="email-link"
+        title="E-mail Adress of Ghazaleh Ashrafi"
+      >
         ghazaal.ashrafi@gmail.com
       </a>
     </div>
