Update Navigation Bar

--- a/about.html
+++ b/about.html
@@ -23,6 +23,7 @@
         <a
           class="navbar-brand"
           href="index.html"
+          target="_blank"
           title="Front-end Developer Ghazaleh Ashrafi"
           >Ghazaleh Ashrafi</a
         >
@@ -44,6 +45,7 @@
               aria-current="page"
               href="index.html"
               title="Homepage"
+              target="_blank"
               >Home</a
             >
             <a
@@ -99,6 +101,7 @@
         href="mailto:ghazaal.ashrafi@gmail.com"
         class="email-link"
         title="E-mail Adress of Ghazaleh Ashrafi"
+        target="_blank"
       >
         ghazaal.ashrafi@gmail.com
       </a>
