--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             <a
               class="nav-link"
               href="about.html"
+              target="_blank"
               title="More Information About Ghazaleh Ashrafi"
               >About me</a
             >
@@ -57,6 +58,7 @@
               class="nav-link"
               href="about.html#contact"
               title="Contact me by clicking here"
+              target="_blank"
               >Contact me</a
             >
           </div>
@@ -72,12 +74,14 @@
         href="about.html#contact"
         class="contact-link"
         title="Contact me by clicking here"
+        target="_blank"
         >Contact me</a
       >
       <a
         href="about.html"
         class="about-link"
         title="More Information About Ghazaleh Ashrafi"
+        target="_blank"
         >About me</a
       >
     </div>
