Update Font Size

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <h2 class="greeting">👋 Hi I am</h2>
     <h1>Ghazaleh Ashrafi</h1>
-    <h3>💚🤍🧡 Front-end developer, based in Iran</h3>
+    <h3><span class="flag">💚🤍🧡</span> Front-end developer, based in Iran</h3>
     <div class="navigation-links">
       <a
         href="about.html#contact"
