--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
           <img
             src="images/lake-urmia.png"
             alt="Lake Urmia"
-            class="img-fluid rounded"
+            class="img-fluid rounded small-image"
           />
         </div>
         <div class="col-sm-6">
-          <div>
+          <div class="text">
             <br />
             <h2>Save Urmia Lake App</h2>
             <p>
@@ -118,11 +118,18 @@
       </div>
 
       <div class="row">
+        <div class="col-sm-6 hidden-image">
+          <img
+            src="images/weather.png"
+            alt="Weather App"
+            class="img-fluid rounded small-image"
+          />
+        </div>
         <div class="col-sm-6">
           <div class="text-center">
             <br />
             <h2>Weather App</h2>
-            <p>
+            <p class="text">
               A weather application using API for SheCodes Plus final project.
             </p>
             <br />
@@ -140,7 +147,7 @@
           <img
             src="images/weather.png"
             alt="Weather App"
-            class="img-fluid rounded"
+            class="img-fluid rounded active-image"
           />
         </div>
       </div>
@@ -149,14 +156,14 @@
           <img
             src="images/birthday.png"
             alt="Birthday App"
-            class="img-fluid rounded"
+            class="img-fluid rounded small-image"
           />
         </div>
         <div class="col-sm-6">
           <div class="text-center">
             <br />
             <h2>Birthday App</h2>
-            <p>For a friends birthday as a present.</p>
+            <p class="text">For a friends birthday as a present.</p>
             <br />
             <a
               href="https://jolly-heliotrope-8c80aa.netlify.app/"
