--- a/index.html
+++ b/index.html
@@ -86,12 +86,12 @@
       >
     </div>
     <div class="container container-size">
-      <div class="row">
+      <div class="row active">
         <div class="col-sm-6">
           <img
             src="images/lake-urmia.png"
             alt="Lake Urmia"
-            class="img-fluid rounded small-image"
+            class="img-fluid rounded"
           />
         </div>
         <div class="col-sm-6">
@@ -117,14 +117,7 @@
         </div>
       </div>
 
-      <div class="row">
-        <div class="col-sm-6 hidden-image">
-          <img
-            src="images/weather.png"
-            alt="Weather App"
-            class="img-fluid rounded small-image"
-          />
-        </div>
+      <div class="row active">
         <div class="col-sm-6">
           <div class="text-center">
             <br />
@@ -147,16 +140,16 @@
           <img
             src="images/weather.png"
             alt="Weather App"
-            class="img-fluid rounded active-image"
+            class="img-fluid rounded"
           />
         </div>
       </div>
-      <div class="row">
+      <div class="row active">
         <div class="col-sm-6">
           <img
             src="images/birthday.png"
             alt="Birthday App"
-            class="img-fluid rounded small-image"
+            class="img-fluid rounded"
           />
         </div>
         <div class="col-sm-6">
@@ -172,6 +165,87 @@
               title="Birthday App-To Celebrate a Friend's Birthday"
               >Weather App</a
             >
+          </div>
+        </div>
+      </div>
+
+      <div class="hidden">
+        <div class="row">
+          <div class="col-sm-12">
+            <img
+              src="images/lake-urmia.png"
+              alt="Lake Urmia"
+              class="img-fluid rounded"
+            />
+          </div>
+          <div class="col-sm-12">
+            <div class="text">
+              <br />
+              <h2>Save Urmia Lake App</h2>
+              <p>
+                Lake Urmia (also Orumiyeh or Orumieh) is an endorheic salt lake
+                in Iran.The lake is located between the provinces of East
+                Azerbaijan and West Azerbaijan in Iran, and west of the southern
+                portion of the Caspian Sea.
+                <br />
+                <br />
+                <a
+                  href="https://www.shecodes.io/workshops/shecodes-basics-a0b33cd6-9dfc-4cea-bd4b-6ea3d75f7132/projects/1298176"
+                  target="_blank"
+                  class="btn contact-link"
+                  title="Save Urmia Lake App-SheCodes Basic's Final Project "
+                  >Launch Lake Urmia App</a
+                >
+              </p>
+            </div>
+          </div>
+          <div class="col-sm-12">
+            <img
+              src="images/weather.png"
+              alt="Weather App"
+              class="img-fluid rounded"
+            />
+          </div>
+          <div class="col-sm-12">
+            <div class="text-center">
+              <br />
+              <h2>Weather App</h2>
+              <p class="text">
+                A weather application using API for SheCodes Plus final project.
+              </p>
+              <br />
+              <br />
+              <a
+                href="https://www.shecodes.io/workshops/shecodes-plus-1d4e0034-92fd-4092-968e-2a18eb87fb3f/projects/1432349"
+                target="_blank"
+                class="btn contact-link"
+                title="Weather App-SheCodes Pro's Final Project"
+                >Weather App</a
+              >
+            </div>
+          </div>
+
+          <div class="col-sm-12">
+            <img
+              src="images/birthday.png"
+              alt="Birthday App"
+              class="img-fluid rounded"
+            />
+          </div>
+          <div class="col-sm-12">
+            <div class="text-center">
+              <br />
+              <h2>Birthday App</h2>
+              <p class="text">For a friends birthday as a present.</p>
+              <br />
+              <a
+                href="https://jolly-heliotrope-8c80aa.netlify.app/"
+                target="_blank"
+                class="btn contact-link"
+                title="Birthday App-To Celebrate a Friend's Birthday"
+                >Weather App</a
+              >
+            </div>
           </div>
         </div>
       </div>
