Update Links and Margins

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
           />
         </div>
         <div class="col-sm-6">
-          <div class="text">
+          <div>
             <br />
             <h2>Save Urmia Lake App</h2>
             <p>
@@ -122,7 +122,7 @@
           <div class="text-center">
             <br />
             <h2>Weather App</h2>
-            <p class="text">
+            <p>
               A weather application using API for SheCodes Plus final project.
             </p>
             <br />
@@ -156,14 +156,13 @@
           <div class="text-center">
             <br />
             <h2>Birthday App</h2>
-            <p class="text">For a friends birthday as a present.</p>
-            <br />
+            <p>For a friends birthday as a present.</p>
             <a
               href="https://jolly-heliotrope-8c80aa.netlify.app/"
               target="_blank"
-              class="btn contact-link"
+              class="btn contact-link projct-button"
               title="Birthday App-To Celebrate a Friend's Birthday"
-              >Weather App</a
+              >Birthday App</a
             >
           </div>
         </div>
@@ -175,50 +174,45 @@
             <img
               src="images/lake-urmia.png"
               alt="Lake Urmia"
-              class="img-fluid rounded"
+              class="img-fluid rounded hidden-image"
             />
           </div>
           <div class="col-sm-12">
-            <div class="text">
+            <br />
+            <h2>Save Urmia Lake App</h2>
+            <p>
+              Lake Urmia (also Orumiyeh or Orumieh) is an endorheic salt lake in
+              Iran.The lake is located between the provinces of East Azerbaijan
+              and West Azerbaijan in Iran, and west of the southern portion of
+              the Caspian Sea.
               <br />
-              <h2>Save Urmia Lake App</h2>
-              <p>
-                Lake Urmia (also Orumiyeh or Orumieh) is an endorheic salt lake
-                in Iran.The lake is located between the provinces of East
-                Azerbaijan and West Azerbaijan in Iran, and west of the southern
-                portion of the Caspian Sea.
-                <br />
-                <br />
-                <a
-                  href="https://www.shecodes.io/workshops/shecodes-basics-a0b33cd6-9dfc-4cea-bd4b-6ea3d75f7132/projects/1298176"
-                  target="_blank"
-                  class="btn contact-link"
-                  title="Save Urmia Lake App-SheCodes Basic's Final Project "
-                  >Launch Lake Urmia App</a
-                >
-              </p>
-            </div>
+            </p>
+            <a
+              href="https://www.shecodes.io/workshops/shecodes-basics-a0b33cd6-9dfc-4cea-bd4b-6ea3d75f7132/projects/1298176"
+              target="_blank"
+              class="btn contact-link projct-button"
+              title="Save Urmia Lake App-SheCodes Basic's Final Project "
+              >Launch Lake Urmia App</a
+            >
           </div>
           <div class="col-sm-12">
             <img
               src="images/weather.png"
               alt="Weather App"
-              class="img-fluid rounded"
+              class="img-fluid rounded hidden-image"
             />
           </div>
           <div class="col-sm-12">
             <div class="text-center">
               <br />
               <h2>Weather App</h2>
-              <p class="text">
+              <p>
                 A weather application using API for SheCodes Plus final project.
               </p>
-              <br />
-              <br />
               <a
                 href="https://www.shecodes.io/workshops/shecodes-plus-1d4e0034-92fd-4092-968e-2a18eb87fb3f/projects/1432349"
                 target="_blank"
-                class="btn contact-link"
+                class="btn contact-link projct-button"
                 title="Weather App-SheCodes Pro's Final Project"
                 >Weather App</a
               >
@@ -229,21 +223,20 @@
             <img
               src="images/birthday.png"
               alt="Birthday App"
-              class="img-fluid rounded"
+              class="img-fluid rounded hidden-image"
             />
           </div>
           <div class="col-sm-12">
             <div class="text-center">
               <br />
               <h2>Birthday App</h2>
-              <p class="text">For a friends birthday as a present.</p>
-              <br />
+              <p>For a friends birthday as a present.</p>
               <a
                 href="https://jolly-heliotrope-8c80aa.netlify.app/"
                 target="_blank"
-                class="btn contact-link"
+                class="btn contact-link projct-button"
                 title="Birthday App-To Celebrate a Friend's Birthday"
-                >Weather App</a
+                >Birthday App</a
               >
             </div>
           </div>
