--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <img
               src="images/lake-urmia.png"
               alt="Lake Urmia"
-              class="img-fluid rounded hidden-image"
+              class="img-fluid rounded mx-auto d-block hidden-image"
             />
           </div>
           <div class="col-sm-12">
@@ -199,7 +199,7 @@
             <img
               src="images/weather.png"
               alt="Weather App"
-              class="img-fluid rounded hidden-image"
+              class="img-fluid rounded mx-auto d-block hidden-image"
             />
           </div>
           <div class="col-sm-12">
@@ -223,7 +223,7 @@
             <img
               src="images/birthday.png"
               alt="Birthday App"
-              class="img-fluid rounded hidden-image"
+              class="img-fluid rounded mx-auto d-block hidden-image"
             />
           </div>
           <div class="col-sm-12">
