--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light header fixed-top">
-      <div class="container-fluid container-size">
+      <div class="container-fluid nav-size">
         <a
           class="navbar-brand"
           href="index.html"
