--- a/about.html
+++ b/about.html
@@ -69,13 +69,15 @@
 
     <p>Department of Physics, Sciences Faculty, Bu-Ali Sina University</p>
 
-    <div class="container">
+    <div class="container active">
       <div class="row">
         <div class="col-md-4">
           <img
             src="images/lake-urmia.png"
             alt="Lake Urmia"
             class="about-image border rounded p-2"
+            mx-auto
+            d-block
           />
         </div>
         <div class="col-md-4">
@@ -83,6 +85,8 @@
             src="images/weather.png"
             alt="Weather Forecast"
             class="about-image border rounded p-2"
+            mx-auto
+            d-block
           />
         </div>
         <div class="col-md-4">
@@ -90,6 +94,34 @@
             src="images/birthday.png"
             alt="Birthday Gift"
             class="about-image border rounded p-2"
+            mx-auto
+            d-block
+          />
+        </div>
+      </div>
+    </div>
+
+    <div class="container hidden">
+      <div class="row">
+        <div class="col-md-12">
+          <img
+            src="images/lake-urmia.png"
+            alt="Lake Urmia"
+            class="about-image border rounded p-2 mx-auto d-block"
+          />
+        </div>
+        <div class="col-md-12">
+          <img
+            src="images/weather.png"
+            alt="Weather Forecast"
+            class="about-image border rounded p-2 mx-auto d-block"
+          />
+        </div>
+        <div class="col-md-12">
+          <img
+            src="images/birthday.png"
+            alt="Birthday Gift"
+            class="about-image border rounded p-2 mx-auto d-block"
           />
         </div>
       </div>
