--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
       integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
     <title>About Front-end Developer Ghazaleh Ashrafi</title>
     <meta
       name="description"
@@ -22,7 +22,7 @@
       <div class="container-fluid nav-size">
         <a
           class="navbar-brand"
-          href="index.html"
+          href="/index.html"
           target="_blank"
           title="Front-end Developer Ghazaleh Ashrafi"
           >Ghazaleh Ashrafi</a
@@ -43,20 +43,20 @@
             <a
               class="nav-link"
               aria-current="page"
-              href="index.html"
+              href="/"
               title="Homepage"
               target="_blank"
               >Home</a
             >
             <a
               class="nav-link active"
-              href="about.html"
+              href="/about.html"
               title="More Information About Ghazaleh Ashrafi"
               >About me</a
             >
             <a
               class="nav-link"
-              href="about.html#contact"
+              href="/about.html#contact"
               title="Contact me by clicking here"
               >Contact me</a
             >
