--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       name="description"
       content="This is a short summary of the poject I, Ghazaleh Ashrafi, created for my SheCodes Workshops."
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg bg-light header fixed-top">
       <div class="container-fluid nav-size">
         <a
           class="navbar-brand"
-          href="index.html"
+          href="/"
           title="Front-end Developer Ghazaleh Ashrafi"
           >Ghazaleh Ashrafi</a
         >
@@ -43,20 +43,20 @@
             <a
               class="nav-link active"
               aria-current="page"
-              href="index.html"
+              href="/"
               title="Homepage"
               >Home</a
             >
             <a
               class="nav-link"
-              href="about.html"
+              href="/about.html"
               target="_blank"
               title="More Information About Ghazaleh Ashrafi"
               >About me</a
             >
             <a
               class="nav-link"
-              href="about.html#contact"
+              href="/about.html#contact"
               title="Contact me by clicking here"
               target="_blank"
               >Contact me</a
@@ -71,14 +71,14 @@
     <h3><span class="flag">💚🤍🧡</span> Front-end developer, based in Iran</h3>
     <div class="navigation-links">
       <a
-        href="about.html#contact"
+        href="/about.html#contact"
         class="contact-link"
         title="Contact me by clicking here"
         target="_blank"
         >Contact me</a
       >
       <a
-        href="about.html"
+        href="/about.html"
         class="about-link"
         title="More Information About Ghazaleh Ashrafi"
         target="_blank"
