--- a/index.html
+++ b/index.html
@@ -171,13 +171,6 @@
       <div class="hidden">
         <div class="row">
           <div class="col-sm-12">
-            <img
-              src="images/lake-urmia.png"
-              alt="Lake Urmia"
-              class="img-fluid rounded mx-auto d-block hidden-image"
-            />
-          </div>
-          <div class="col-sm-12">
             <br />
             <h2>Save Urmia Lake App</h2>
             <p>
@@ -187,6 +180,13 @@
               the Caspian Sea.
               <br />
             </p>
+          </div>
+          <div class="col-sm-12">
+            <img
+              src="images/lake-urmia.png"
+              alt="Lake Urmia"
+              class="img-fluid rounded mx-auto d-block"
+            />
             <a
               href="https://www.shecodes.io/workshops/shecodes-basics-a0b33cd6-9dfc-4cea-bd4b-6ea3d75f7132/projects/1298176"
               target="_blank"
@@ -196,19 +196,18 @@
             >
           </div>
           <div class="col-sm-12">
-            <img
-              src="images/weather.png"
-              alt="Weather App"
-              class="img-fluid rounded mx-auto d-block hidden-image"
-            />
+            <h2>Weather App</h2>
+            <p>
+              A weather application using API for SheCodes Plus final project.
+            </p>
           </div>
           <div class="col-sm-12">
             <div class="text-center">
-              <br />
-              <h2>Weather App</h2>
-              <p>
-                A weather application using API for SheCodes Plus final project.
-              </p>
+              <img
+                src="images/weather.png"
+                alt="Weather App"
+                class="img-fluid rounded mx-auto d-block"
+              />
               <a
                 href="https://www.shecodes.io/workshops/shecodes-plus-1d4e0034-92fd-4092-968e-2a18eb87fb3f/projects/1432349"
                 target="_blank"
@@ -220,17 +219,16 @@
           </div>
 
           <div class="col-sm-12">
-            <img
-              src="images/birthday.png"
-              alt="Birthday App"
-              class="img-fluid rounded mx-auto d-block hidden-image"
-            />
+            <h2>Birthday App</h2>
+            <p>For a friends birthday as a present.</p>
           </div>
           <div class="col-sm-12">
             <div class="text-center">
-              <br />
-              <h2>Birthday App</h2>
-              <p>For a friends birthday as a present.</p>
+              <img
+                src="images/birthday.png"
+                alt="Birthday App"
+                class="img-fluid rounded mx-auto d-block"
+              />
               <a
                 href="https://jolly-heliotrope-8c80aa.netlify.app/"
                 target="_blank"
