Update the Links

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       <div class="container-fluid nav-size">
         <a
           class="navbar-brand"
-          href="/index.html"
+          href="/"
           target="_blank"
           title="Front-end Developer Ghazaleh Ashrafi"
           >Ghazaleh Ashrafi</a
