Update Image Sources

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
       <div class="row">
         <div class="col-md-4">
           <img
-            src="images/lake-urmia.png"
+            src="/images/lake-urmia.png"
             alt="Lake Urmia"
             class="about-image border rounded p-2"
             mx-auto
@@ -82,7 +82,7 @@
         </div>
         <div class="col-md-4">
           <img
-            src="images/weather.png"
+            src="/images/weather.png"
             alt="Weather Forecast"
             class="about-image border rounded p-2"
             mx-auto
@@ -91,7 +91,7 @@
         </div>
         <div class="col-md-4">
           <img
-            src="images/birthday.png"
+            src="/images/birthday.png"
             alt="Birthday Gift"
             class="about-image border rounded p-2"
             mx-auto
@@ -105,7 +105,7 @@
       <div class="row">
         <div class="col-md-12">
           <img
-            src="images/lake-urmia.png"
+            src="/images/lake-urmia.png"
             alt="Lake Urmia"
             class="about-image border rounded p-2 mx-auto d-block"
           />
@@ -119,7 +119,7 @@
         </div>
         <div class="col-md-12">
           <img
-            src="images/birthday.png"
+            src="/images/birthday.png"
             alt="Birthday Gift"
             class="about-image border rounded p-2 mx-auto d-block"
           />
