--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <div class="row active">
         <div class="col-sm-6">
           <img
-            src="images/lake-urmia.png"
+            src="/images/lake-urmia.png"
             alt="Lake Urmia"
             class="img-fluid rounded"
           />
@@ -138,7 +138,7 @@
         </div>
         <div class="col-sm-6">
           <img
-            src="images/weather.png"
+            src="/images/weather.png"
             alt="Weather App"
             class="img-fluid rounded"
           />
@@ -147,7 +147,7 @@
       <div class="row active">
         <div class="col-sm-6">
           <img
-            src="images/birthday.png"
+            src="/images/birthday.png"
             alt="Birthday App"
             class="img-fluid rounded"
           />
@@ -183,7 +183,7 @@
           </div>
           <div class="col-sm-12">
             <img
-              src="images/lake-urmia.png"
+              src="/images/lake-urmia.png"
               alt="Lake Urmia"
               class="img-fluid rounded mx-auto d-block"
             />
@@ -204,7 +204,7 @@
           <div class="col-sm-12">
             <div class="text-center">
               <img
-                src="images/weather.png"
+                src="/images/weather.png"
                 alt="Weather App"
                 class="img-fluid rounded mx-auto d-block"
               />
@@ -225,7 +225,7 @@
           <div class="col-sm-12">
             <div class="text-center">
               <img
-                src="images/birthday.png"
+                src="/images/birthday.png"
                 alt="Birthday App"
                 class="img-fluid rounded mx-auto d-block"
               />
