Update Birthday Lake

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 class="img-fluid rounded mx-auto d-block"
               />
               <a
-                href="https://jolly-heliotrope-8c80aa.netlify.app/"
+                href="#"
                 target="_blank"
                 class="btn contact-link projct-button"
                 title="Birthday App-To Celebrate a Friend's Birthday"
